[tool.poetry]
name = "py-ds"
version = "0.1.0"
description = ""
authors = ["Juraj Zachar <juraj.zachar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project"